async-race-api/src/components/winners/winners.css
.winners-page-hide {
  z-index: -20;
}

.winners-page {
  position: fixed;
  top: 50px;
  width: 100%;
  height: calc(100vh - 50px);
  background-color: white;
}

.table-of-winners {
  width: 90%;
  margin: 20px auto;
  border-collapse: collapse;
  border: 1px solid grey;
}

.table-of-winners th {
  border: 1px solid grey;
  padding: 10px;
  background-color: aquamarine;
}

.table-of-winners td {
  text-align: center;
  border: 1px solid grey;
  padding: 5px;
}

.winners-info {
  margin: 10px;
}

.sort-wins {
  margin: 20px 10px 10px;
}

